services/minio/resources/app/backend-traffic-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: minio-no-compression
  namespace: minio
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: minio-s3
  connection:
    bufferLimit: 4Mi
  tcpKeepalive:
    idleTime: 60s
    interval: 10s
    probes: 3
