services/minio/resources/app/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: waf
  namespace: minio
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: minio-s3
  extAuth:
    failOpen: true
    grpc:
      backendRefs:
        - name: envoy-bouncer
          namespace: crowdsec
          port: 8080
