services/minio/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: minio
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: minio
  ingress:
    - fromEntities:
        - cluster
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: public
            gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway-system
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
    - toEntities:
        - cluster
